--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^8.54",
         "laravel/passport": "^10.1",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.3",
         "nexmo/client": "^2.4",
         "pusher/pusher-php-server": "^7.0",
         "spatie/laravel-permission": "^5.1"
