--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         ],
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "chmod -R 777 public/"
+            "chmod -R 777 public/",
+            "npm run prod"
         ]
     },
     "extra": {
